fixed contrast errors and other accessability related errors

--- a/src/components/BannerCommercial/BannerCommercial.module.css
+++ b/src/components/BannerCommercial/BannerCommercial.module.css
@@ -9,7 +9,7 @@
     align-items: center;
     width: 100%;
     padding: 5rem 0;
-    background-color: var(--color-mid-light-purple);
+    background-color: var(--color-dark-purple);
   }
 
   .container {
@@ -19,7 +19,7 @@
   }
 
   .headLine {
-    color: var(--color-primary);
+    color: var(--color-light-purple);
     font-size: 2.5rem;
     font-weight: 800;
     font-style: italic;
